--- a/AdminDashBoard/index.html
+++ b/AdminDashBoard/index.html
@@ -78,15 +78,77 @@
             </nav>
         </div>
         <div class="main">
-            <div class="topnav-left">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
-                <input type="text" class="searchbar">
+            <div class="header">
+                <div class="topnav">
+                    <div class="topnav-left">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                        <input type="text" class="searchbar">
+                    </div>
+                    <div class="topnav-right">
+                        <svg class="bell" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-ring-outline</title><path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
+                        <svg class="profileIcon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                        viewBox="0 0 512 512" xml:space="preserve">
+                        <circle style="fill:#90DFAA;" cx="256" cy="256" r="256"/>
+                        <path style="fill:#2C9984;" d="M508.114,300.639L369.778,162.302L205.145,325.818l-61.487,72.404l113.761,113.761
+                        C382.942,511.3,487.072,420.29,508.114,300.639z"/>
+                        <polygon style="fill:#FFFFFF;" points="321.253,113.778 143.658,113.778 143.658,398.222 369.778,398.222 369.778,162.302 "/>
+                        <polygon style="fill:#E6F3FF;" points="369.778,162.302 321.253,113.778 237.037,113.778 237.037,398.222 369.778,398.222 "/>
+                        <polygon style="fill:#CFDBE6;" points="321.253,162.304 369.778,162.302 321.253,113.778 "/>
+                        <circle style="fill:#26BEBE;" cx="237.037" cy="215.143" r="37.9"/>
+                        <path style="fill:#1DA09C;" d="M274.937,215.14c0-20.932-16.968-37.9-37.898-37.9v75.798
+                        C257.969,253.038,274.937,236.07,274.937,215.14z"/>
+                        <path style="fill:#324A5E;" d="M158.868,334.76c0-43.172,34.997-78.169,78.169-78.169s78.169,34.997,78.169,78.169L158.868,334.76
+                        L158.868,334.76z"/>
+                        <path style="fill:#2B3B4E;" d="M237.037,256.593v78.169h78.167C315.206,291.59,280.209,256.593,237.037,256.593z"/>
+                        <circle style="fill:#FFD15D;" cx="350.815" cy="293.926" r="63.104"/>
+                        <g>
+                            <path style="fill:#F4A200;" d="M350.815,369.778c-41.825,0-75.852-34.026-75.852-75.852s34.026-75.852,75.852-75.852
+                            s75.852,34.026,75.852,75.852S392.64,369.778,350.815,369.778z M350.815,243.571c-27.765,0-50.355,22.59-50.355,50.355
+                            c0,27.765,22.59,50.355,50.355,50.355c27.765,0,50.355-22.59,50.355-50.355C401.17,266.161,378.58,243.571,350.815,243.571z"/>
+                            <rect x="339.334" y="265.24" style="fill:#F4A200;" width="22.947" height="57.372"/>
+                        </g>
+                            </svg>
+                        <span class="nickname">Alan Napieralski</span>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile-left">
+                        <svg class="profileIcon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                        viewBox="0 0 512 512" xml:space="preserve">
+                        <circle style="fill:#90DFAA;" cx="256" cy="256" r="256"/>
+                        <path style="fill:#2C9984;" d="M508.114,300.639L369.778,162.302L205.145,325.818l-61.487,72.404l113.761,113.761
+                        C382.942,511.3,487.072,420.29,508.114,300.639z"/>
+                        <polygon style="fill:#FFFFFF;" points="321.253,113.778 143.658,113.778 143.658,398.222 369.778,398.222 369.778,162.302 "/>
+                        <polygon style="fill:#E6F3FF;" points="369.778,162.302 321.253,113.778 237.037,113.778 237.037,398.222 369.778,398.222 "/>
+                        <polygon style="fill:#CFDBE6;" points="321.253,162.304 369.778,162.302 321.253,113.778 "/>
+                        <circle style="fill:#26BEBE;" cx="237.037" cy="215.143" r="37.9"/>
+                        <path style="fill:#1DA09C;" d="M274.937,215.14c0-20.932-16.968-37.9-37.898-37.9v75.798
+                        C257.969,253.038,274.937,236.07,274.937,215.14z"/>
+                        <path style="fill:#324A5E;" d="M158.868,334.76c0-43.172,34.997-78.169,78.169-78.169s78.169,34.997,78.169,78.169L158.868,334.76
+                        L158.868,334.76z"/>
+                        <path style="fill:#2B3B4E;" d="M237.037,256.593v78.169h78.167C315.206,291.59,280.209,256.593,237.037,256.593z"/>
+                        <circle style="fill:#FFD15D;" cx="350.815" cy="293.926" r="63.104"/>
+                        <g>
+                            <path style="fill:#F4A200;" d="M350.815,369.778c-41.825,0-75.852-34.026-75.852-75.852s34.026-75.852,75.852-75.852
+                            s75.852,34.026,75.852,75.852S392.64,369.778,350.815,369.778z M350.815,243.571c-27.765,0-50.355,22.59-50.355,50.355
+                            c0,27.765,22.59,50.355,50.355,50.355c27.765,0,50.355-22.59,50.355-50.355C401.17,266.161,378.58,243.571,350.815,243.571z"/>
+                            <rect x="339.334" y="265.24" style="fill:#F4A200;" width="22.947" height="57.372"/>
+                        </g>
+                            </svg>
+                        <div class="profileInfo">
+                            <span>Hi there,</span>
+                            <span>Alan Napieralski (@alann)</span>
+                        </div>
+                    </div>
+                    <div class="profile-right">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
+                </div>
             </div>
-            <div class="topnav-right">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-ring</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
-                <div class="profileIcon"></div>
-                <div class="profile"></div>
-                <span class="nickname">Alan Napieralski</span>
+            <div class="dashboard">
+                
             </div>
         </div>
     </div>
