implemented working tic tac toe game in the terminal

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -8,15 +8,33 @@
 </head>
 <body>
     <div class="board">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
+        <button class="square">
+            <div id="cell"></div>
+        </button>
     </div>
 </body>
 </html> 
