moved the game into the browser but multiple games in a row are not yet supported

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
     <div class="board">
         <button class="square">
             <div id="cell"></div>
@@ -36,5 +37,7 @@
             <div id="cell"></div>
         </button>
     </div>
+
+    <script src="tictactoe.js"></script>
 </body>
 </html> 
