added win and draw count and fixed any bugs occuring after playing one game

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -37,6 +37,11 @@
             <div id="cell"></div>
         </button>
     </div>
+    <div class="countContainer">
+        <p class="player1">asdfasdf</p>
+        <p class="draws">asdfasdfasdf</p>
+        <p class="player2">asdfasdf</p>
+    </div>
 
     <script src="tictactoe.js"></script>
 </body>
