created the basic landing page of the restaurant entirely from javascript and used modules

--- a/5_RestaurantPage/src/index.html
+++ b/5_RestaurantPage/src/index.html
@@ -8,14 +8,14 @@
 <body>
     <header>
         <nav>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button>Main</button>
+            <button>Menu</button>
+            <button>About</button>
         </nav>
     </header>
 
     <div id="content">
-
+      
     </div>
 </body>
 </html>
