created a single page website with tab-switching logic

--- a/5_RestaurantPage/src/index.html
+++ b/5_RestaurantPage/src/index.html
@@ -8,14 +8,14 @@
 <body>
     <header>
         <nav>
-            <button>Main</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button class="main">Main</button>
+            <button class="menu">Menu</button>
+            <button class="about">About</button>
         </nav>
     </header>
 
     <div id="content">
-      
+       
     </div>
 </body>
 </html>
