--- a/6_ToDoApp/src/index.html
+++ b/6_ToDoApp/src/index.html
@@ -23,49 +23,16 @@
                 </div>
                 <div class="myProjects">
                     <ul>
-                        <!-- to be added dynamically -->
-                        <li><button class="taskListBtn">Shopping List</button></li>
-                        <li><button class="taskListBtn">My personal Project</button></li>
-                        <li><button class="taskListBtn">IDK</button></li>
+                        <!-- dynamic -->
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="content">
-            <h1>Shopping List</h1>
+            <h1></h1>
             <form id="todo-form">
                 <ul id="todo-list">
-                    <div class="checklist-item">
-                        <div class="input-wrapper">
-                            <div class="round">
-                                <input type="checkbox" checked id="checkbox1" />
-                                <label for="checkbox1"></label>
-                            </div>
-                            <input type="text" id="todo-input1" autocomplete="off" placeholder="Enter a task" class="todo-input">
-                            <input type="date" id="due-date"> 
-                            <!-- change to type text on datepicker -->
-                        </div>
-                    </div>
-                    <div class="checklist-item">
-                        <div class="input-wrapper">
-                            <div class="round">
-                                <input type="checkbox" checked id="checkbox2" />
-                                <label for="checkbox2"></label>
-                            </div>
-                            <input type="text" id="todo-input2" autocomplete="off" placeholder="Enter a task" class="todo-input">
-                            <input type="date" id="due-date">
-                        </div>
-                    </div>
-                    <div class="checklist-item">
-                        <div class="input-wrapper">
-                            <div class="round">
-                                <input type="checkbox" checked id="checkbox3" />
-                                <label for="checkbox3"></label>
-                            </div>
-                            <input type="text" id="todo-input3" autocomplete="off" placeholder="Enter a task" class="todo-input">
-                            <input type="date" id="due-date">
-                        </div>
-                    </div>
+                    <!-- dynamic -->
                 </ul>
             </form>
         </div>
@@ -73,7 +40,6 @@
     <div class="addTask">
         <button class="addTaskButton" id="addTask">+</button>
     </div>
-    <!-- <input type="text" id="createProject" placeholder="Enter the name of your new project"></input> -->
     <script src="app.js"></script>
 </body>
 </html>
