--- a/6_ToDoApp/src/index.html
+++ b/6_ToDoApp/src/index.html
@@ -14,7 +14,7 @@
         <nav class="navBar">
             <div class="allTasks">
                 <h2>All Tasks</h2>
-                <button class="taskListBtn" id="allTasksButton"><h2>All Tasks</h2></button>
+                <button class="taskListBtn" id="allTasksButton">All Tasks</button>
             </div>
             <div class="projectComponent">
                 <div class="myProjectsHeadline">
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <div class="content">
-            <h1></h1>
+            <h2>All Tasks</h2>
             <form id="todo-form">
                 <ul id="todo-list">
                     <!-- dynamic -->
